<resources>
    <string name="app_name">tarea4</string>
    <string name="action_privacy_policy">privacy policy</string>
    <string name="action_logOut">Log Out</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="first_section_tab">Technology</string>
    <string name="second_section_tab">Home</string>
    <string name="third_section_tab">Electronics</string>
    <string name="item_product_btn_share">SHARE</string>
    <string name="item_product_btn_more">SEE MORE</string>

    <string name="activity_product_btn_save">SAVE</string>
    <string name="activity_product_btn_cancel">CANCEL</string>

    <string name="activity_product_input_title">Title</string>
    <string name="activity_product_input_store">Store</string>
    <string name="activity_product_input_location">Location</string>

    <string name="activity_login_user">Type username</string>
    <string name="activity_login_pass">Type password</string>
    <string name="activity_login_btn">Login</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
