<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/activity_login_input_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/activity_login_user"
        />
    <EditText
        android:id="@+id/activity_login_input_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/activity_login_pass"
        />
    <Button
        android:id="@+id/activity_login_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_login_btn"
        />


</LinearLayout>