<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductActivity"
    android:orientation="vertical"
    android:padding="@dimen/appbar_padding_top">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:scaleType="centerCrop"
        android:id="@+id/activity_detail_image" />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/first_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/activity_detail_title"
            android:inputType="text"
            android:hint="@string/activity_product_input_title"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/second_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/activity_detail_store"
            android:inputType="text"
            android:hint="@string/activity_product_input_store"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/third_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/activity_detail_location"
            android:inputType="text"
            android:hint="@string/activity_product_input_location"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="bottom">
        <Button
            android:id="@+id/activity_detail_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/activity_product_btn_save"
            android:layout_gravity="bottom"/>
        <Button
            android:id="@+id/activity_detail_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/activity_product_btn_cancel"
            android:layout_gravity="bottom"/>
    </LinearLayout>



</LinearLayout>