<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_product_height_general"
    android:layout_margin="@dimen/item_product_margin_general"
    android:scrollbarStyle="outsideOverlay"
    card_view:cardCornerRadius="@dimen/item_product_corner_radius">

    <RelativeLayout
        android:id="@+id/item_product_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/item_product_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_product_img_height"
            android:scaleType="centerInside"
            android:src="@drawable/mac"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:id="@+id/item_product_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/item_product_image"
            android:layout_gravity="bottom"
            android:background="@color/item_product_title"
            android:gravity="center"
            android:paddingTop="@dimen/item_product_padding_title"
            android:paddingBottom="@dimen/item_product_padding_title"
            tools:text="Mac"
            android:textColor="@android:color/white"
            android:textSize="@dimen/item_product_textSize_title"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/card_home_info"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_product_linear1_height"
            android:layout_below="@+id/item_product_image"
            android:layout_marginTop="@dimen/item_product_linear1_marginTop"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/item_product_thumbnail"
                android:layout_width="@dimen/item_product_thumbnail_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:src="@drawable/bestbuy">

            </ImageView>

            <LinearLayout
                android:layout_width="@dimen/item_product_linear2_width"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/item_product_store"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Best Buy"
                    android:textColor="@color/item_product_textView"/>

                <TextView
                    android:id="@+id/item_product_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Guadalajara, Jalisco"
                    android:textColor="@color/item_product_textView"/>

                <TextView
                    android:id="@+id/item_product_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="123456789"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/item_product_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_home_info"
            android:layout_alignStart="@id/card_home_info"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/item_product_btn_share"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/item_product_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_home_info"
            android:layout_toRightOf="@id/item_product_share"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/item_product_btn_more"
            android:textColor="#03A9F4"/>


    </RelativeLayout>


</android.support.v7.widget.CardView>